--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
 python-dotenv = "==0.10.3"
@@ -11,7 +12,9 @@ pygraphviz = "==1.5"
 transitions = "==0.6.9"
 line-bot-sdk = "==1.14.0"
 Flask = "==1.0.2"
-
+requests = "*"
+bs4 = "*"
+beautifulsoup4 = "*"
 
 [requires]
 python_version = "3.7"
